--- a/admin/app/styles/components/target-profiles/badges.scss
+++ b/admin/app/styles/components/target-profiles/badges.scss
@@ -29,7 +29,6 @@
 }
 
 .badges-table-actions {
-
   &__button {
     width: 100%;
 
@@ -42,7 +41,7 @@
 }
 
 .badges-table-actions-delete {
-  margin-top: $spacing-xs;
+  margin-top: $pix-spacing-xs;
 }
 
 .key-table {
