--- a/admin/app/styles/globals/nav.scss
+++ b/admin/app/styles/globals/nav.scss
@@ -24,7 +24,7 @@
     align-items: center;
     display: flex;
     justify-content: center;
-    padding: 0 $spacing-xs;
+    padding: 0 $pix-spacing-xs;
     cursor: pointer;
     color: $pix-neutral-45;
     font-weight: 500;
@@ -44,7 +44,6 @@
   }
 
   .navbar-list-item {
-
     &__link {
       color: $pix-neutral-45;
       font-weight: 500;
@@ -65,7 +64,7 @@
   }
 }
 
-.navbar+section {
+.navbar + section {
   @include whiteBlock;
 
   padding: 20px;
