--- a/admin/app/styles/globals/table-admin.scss
+++ b/admin/app/styles/globals/table-admin.scss
@@ -1,6 +1,6 @@
 /* stylelint-disable selector-class-pattern */
 .table-admin {
-  margin-bottom: $spacing-s;
+  margin-bottom: $pix-spacing-s;
 
   a:not(.pix-button) {
     color: $pix-primary;
